// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Course Integration GET /course/:cid should return course if course is found 1`] = `
{
  "course_code": "COSC 499",
  "course_name": "Capstone Project",
  "created_at": "1000000000",
  "id": 1,
  "invite_code": "123",
  "is_archived": false,
  "section_name": "001",
  "updated_at": "1000000000",
}
`;

exports[`Course Integration GET /course/:cid/members should return 200 if user is professor with 2 members 1`] = `
{
  "data": [
    {
      "course_role": "professor",
      "id": 1,
      "user": {
        "avatar_url": null,
        "email": "professor@test.com",
        "first_name": "John",
        "id": 1,
        "last_name": "Doe",
      },
    },
    {
      "course_role": "student",
      "id": 3,
      "user": {
        "avatar_url": null,
        "email": "john.doe-1@test.com",
        "first_name": "John",
        "id": 3,
        "last_name": "Doe-0",
      },
    },
  ],
  "meta": {
    "hasNextPage": true,
    "hasPreviousPage": false,
    "itemCount": 10,
    "page": "1",
    "pageCount": 5,
    "take": "2",
  },
}
`;

exports[`Course Integration GET /course/:cid/members should return 200 if user is professor with default query parameters 1`] = `
{
  "data": [
    {
      "course_role": "professor",
      "id": 1,
      "user": {
        "avatar_url": null,
        "email": "professor@test.com",
        "first_name": "John",
        "id": 1,
        "last_name": "Doe",
      },
    },
    {
      "course_role": "student",
      "id": 3,
      "user": {
        "avatar_url": null,
        "email": "john.doe-1@test.com",
        "first_name": "John",
        "id": 3,
        "last_name": "Doe-0",
      },
    },
    {
      "course_role": "student",
      "id": 2,
      "user": {
        "avatar_url": null,
        "email": "john.doe-0@test.com",
        "first_name": "John",
        "id": 2,
        "last_name": "Doe-1",
      },
    },
    {
      "course_role": "student",
      "id": 4,
      "user": {
        "avatar_url": null,
        "email": "john.doe-2@test.com",
        "first_name": "John",
        "id": 4,
        "last_name": "Doe-1",
      },
    },
    {
      "course_role": "student",
      "id": 5,
      "user": {
        "avatar_url": null,
        "email": "john.doe-3@test.com",
        "first_name": "John",
        "id": 5,
        "last_name": "Doe-2",
      },
    },
    {
      "course_role": "student",
      "id": 6,
      "user": {
        "avatar_url": null,
        "email": "john.doe-4@test.com",
        "first_name": "John",
        "id": 6,
        "last_name": "Doe-3",
      },
    },
    {
      "course_role": "student",
      "id": 7,
      "user": {
        "avatar_url": null,
        "email": "john.doe-5@test.com",
        "first_name": "John",
        "id": 7,
        "last_name": "Doe-4",
      },
    },
    {
      "course_role": "student",
      "id": 8,
      "user": {
        "avatar_url": null,
        "email": "john.doe-6@test.com",
        "first_name": "John",
        "id": 8,
        "last_name": "Doe-5",
      },
    },
    {
      "course_role": "student",
      "id": 9,
      "user": {
        "avatar_url": null,
        "email": "john.doe-7@test.com",
        "first_name": "John",
        "id": 9,
        "last_name": "Doe-6",
      },
    },
    {
      "course_role": "student",
      "id": 10,
      "user": {
        "avatar_url": null,
        "email": "john.doe-8@test.com",
        "first_name": "John",
        "id": 10,
        "last_name": "Doe-7",
      },
    },
    {
      "course_role": "student",
      "id": 11,
      "user": {
        "avatar_url": null,
        "email": "john.doe-9@test.com",
        "first_name": "John",
        "id": 11,
        "last_name": "Doe-8",
      },
    },
  ],
  "meta": {
    "hasNextPage": false,
    "hasPreviousPage": false,
    "itemCount": 11,
    "pageCount": null,
  },
}
`;

exports[`Course Integration GET /course/:cid/public should return course if course is found 1`] = `
{
  "course_code": "COSC 499",
  "course_name": "Capstone Project",
  "id": 1,
  "section_name": "001",
}
`;

exports[`Course Integration POST /course/:cid/enroll should return 200 if user is not already enrolled 1`] = `
CourseUserModel {
  "course": CourseModel {
    "course_code": "COSC 499",
    "course_name": "Capstone Project",
    "created_at": "1000000000",
    "id": 1,
    "invite_code": "123",
    "is_archived": false,
    "section_name": "001",
    "updated_at": "1000000000",
  },
  "course_role": "student",
  "id": 1,
  "user": UserModel {
    "auth_type": "email",
    "avatar_url": null,
    "created_at": "1000000000",
    "email": "john.doe@test.com",
    "email_verified": true,
    "first_name": "John",
    "id": 1,
    "last_name": "Doe",
    "password": "password",
    "role": "student",
    "updated_at": "1000000000",
  },
}
`;

exports[`Course Integration POST /course/create should return 200 if course is created 1`] = `
CourseModel {
  "course_code": "COSC 499",
  "course_name": "Capstone Project",
  "id": 1,
  "is_archived": false,
  "section_name": "001",
  "semester": SemesterModel {
    "created_at": "1000000000",
    "ends_at": "1000000000",
    "id": 1,
    "name": "Semester 1",
    "starts_at": "1000000000",
    "updated_at": "1000000000",
  },
}
`;
